# DevOps-Core-Course

./: .flake8
.github/workflows/: python-ci.yml
app_python/: .dockerignore  Dockerfile  README.md  app.py  pyproject.toml
app_python/docs/: LAB01.md
app_python/src/: app.py
app_python/tests/: test_app.py
